istioify/uaa/Deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: uaa
spec:
  selector:
    matchLabels:
      app: uaa
      version: 4.18.0
  replicas: 1
  template:
    metadata:
      labels:
        app: uaa
        version: 4.18.0
    spec:
      imagePullSecrets:
      - name: aliyun-registry-key
      volumes:
      - name: uaa-config
        configMap:
          name: uaa-configuration
      containers:
      - name: uaa
        volumeMounts:
        - name: uaa-config
          mountPath: /etc/uaa
        image: registry.cn-hangzhou.aliyuncs.com/fengxin58/uaa:4.18.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
