istioify/uaa/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uaa
spec:
  ports:
  - name: http-uaa
    port: 30007
    targetPort: 8080
  selector:
    app: uaa
  type: ClusterIP
