istioify/uaa/Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: uaa-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "uaa-stage.sdmkny.com"
    port:
      name: https-uaa
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
  - hosts:
    - "uaa-stage.sdmkny.com"
    port:
      name: http-uaa
      number: 80
      protocol: HTTP
