istioify/uaa/Destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: uaa
spec:
  host: uaa
  trafficPolicy:
    tls:
     mode: ISTIO_MUTUAL
  subsets:
  - name: V4180
    labels:
      version: 4.18.0
